<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.mwr.dz.views.ConnectorStatusIndicator android:id="@id/server_status_indicator" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@id/server_enabled" android:layout_alignTop="@id/server_enabled" android:layout_alignBottom="@id/server_enabled" />
    <include layout="@layout/toggle_server" />
    <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/label_server_details" android:paddingTop="24.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/embedded_server_details" android:layout_below="@id/server_status_indicator" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" />
    <com.mwr.dz.views.CheckListItemView android:id="@id/server_status_ssl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/label_server_details" android:layout_alignParentLeft="true" app:text="@string/ssl_enabled" />
    <com.mwr.dz.views.CheckListItemView android:id="@id/server_status_password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/server_status_ssl" android:layout_alignParentLeft="true" app:text="@string/embedded_server_password_protected" />
    <com.mwr.dz.views.CheckListItemView android:id="@id/server_status_enabled" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/server_status_password" android:layout_alignParentLeft="true" app:text="@string/enabled" />
    <com.mwr.dz.views.CheckListItemView android:id="@id/server_status_listening" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/server_status_enabled" android:layout_alignParentLeft="true" app:text="@string/connected" />
    <com.mwr.dz.views.CheckListItemView android:id="@id/server_status_sessions" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/server_status_listening" android:layout_alignParentLeft="true" app:text="@string/session_active" />
    <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/label_server_messages" android:paddingTop="24.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/embdded_server_messages" android:layout_below="@id/server_status_sessions" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" />
    <ListView android:id="@id/server_messages" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/label_server_messages" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" />
</RelativeLayout>