<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.mwr.dz.views.ConnectorStatusIndicator android:id="@id/endpoint_status_indicator" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_toRightOf="@id/endpoint_enabled" android:layout_alignTop="@id/endpoint_enabled" android:layout_alignBottom="@id/endpoint_enabled" />
    <include layout="@layout/toggle_endpoint" />
    <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/label_endpoint_details" android:paddingTop="24.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/endpoint_details" android:layout_below="@id/endpoint_status_indicator" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" />
    <com.mwr.dz.views.CheckListItemView android:id="@id/endpoint_status_ssl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/label_endpoint_details" android:layout_alignParentLeft="true" app:text="@string/ssl_enabled" />
    <com.mwr.dz.views.CheckListItemView android:id="@id/endpoint_status_password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/endpoint_status_ssl" android:layout_alignParentLeft="true" app:text="@string/endpoint_password_protected" />
    <com.mwr.dz.views.CheckListItemView android:id="@id/endpoint_status_enabled" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/endpoint_status_password" android:layout_alignParentLeft="true" app:text="@string/enabled" />
    <com.mwr.dz.views.CheckListItemView android:id="@id/endpoint_status_connected" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/endpoint_status_enabled" android:layout_alignParentLeft="true" app:text="@string/connected" />
    <com.mwr.dz.views.CheckListItemView android:id="@id/endpoint_status_sessions" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/endpoint_status_connected" android:layout_alignParentLeft="true" app:text="@string/session_active" />
    <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/label_endpoint_messages" android:paddingTop="24.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/endpoint_messages" android:layout_below="@id/endpoint_status_sessions" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" />
    <ListView android:id="@id/endpoint_messages" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/label_endpoint_messages" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" />
</RelativeLayout>